SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/File_Explorer_Page_Configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>File Explorer Page configuration.</description>
    <label>BT File Explorer Page Configuration</label>
</CustomObject>