SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Enable_Mass_Actions__c.field-meta.xml
<CustomField>
    <fullName>Enable_Mass_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, mass selection and actions will be enabled.</description>
    <inlineHelpText>If true, mass selection and actions will be enabled.</inlineHelpText>
    <label>Enable Mass Actions</label>
    <type>Checkbox</type>
</CustomField>