SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/File_Detail_Fields__c.field-meta.xml
<CustomField>
    <fullName>File_Detail_Fields__c</fullName>
    <description>File fields needs to be displayed on page.</description>
    <inlineHelpText>File fields needs to be displayed on page.</inlineHelpText>
    <label>File Detail Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>