SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Max_Search_Records__c.field-meta.xml
<CustomField>
    <fullName>Max_Search_Records__c</fullName>
    <description>Maximum number of records to display as search result.</description>
    <inlineHelpText>Maximum number of records to display as search result.</inlineHelpText>
    <label>Max Search Records</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>