SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Page_Size__c.field-meta.xml
<CustomField>
    <fullName>Page_Size__c</fullName>
    <defaultValue>10</defaultValue>
    <description>Number of files / folders to show in a single page.</description>
    <inlineHelpText>Number of files / folders to show in a single page.</inlineHelpText>
    <label>Page Size</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>