SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Page_Title__c.field-meta.xml
<CustomField>
    <fullName>Page_Title__c</fullName>
    <description>This title is used to display assessment title on &quot;Home&quot; page.</description>
    <inlineHelpText>This title is used to display assessment title on &quot;Home&quot; page.</inlineHelpText>
    <label>Page Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>