SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Show_Extension_Icon__c.field-meta.xml
<CustomField>
    <fullName>Show_Extension_Icon__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Show / Hide file extension icon.</description>
    <inlineHelpText>If checked, show file extension icon.</inlineHelpText>
    <label>Show File Extension Icon</label>
    <type>Checkbox</type>
</CustomField>