SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Show_Header__c.field-meta.xml
<CustomField>
    <fullName>Show_Header__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If checked, page header will be displayed.</description>
    <inlineHelpText>If checked, page header will be displayed.</inlineHelpText>
    <label>Show Header</label>
    <type>Checkbox</type>
</CustomField>