SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Show_Hierarchical_File_UI__c.field-meta.xml
<CustomField>
    <fullName>Show_Hierarchical_File_UI__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show / Hide section for hierarchical file UI.</description>
    <inlineHelpText>If checked, show section for hierarchical file.</inlineHelpText>
    <label>Show Hierarchical File UI</label>
    <type>Checkbox</type>
</CustomField>