SubBt/force-app/main/default/objects/File_Explorer_Page_Configuration__c/fields/Static_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_Resource_Name__c</fullName>
    <description>Name of static resource where your file extension icons are added.</description>
    <inlineHelpText>Name of static resource where your file extension icons are added. Keep it empty, if you want to use default icons.</inlineHelpText>
    <label>Static Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>